syntax = "proto3";

option csharp_namespace = "gRPC_AspNetCore.Protos";

import "google/protobuf/timestamp.proto";

service ProductService{
	rpc CreateProduct(stream CreateProductRequest) returns(stream CreateProductReply);

	rpc GetAllProducts(GetAllProductsRequest) returns (stream GetAllProductsReply);

	rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);

	rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdReply);

	rpc RemoveProductById(stream RemoveProductByIdRequest) returns (RemoveProductByIdReply);
}

message CreateProductRequest{
	string title = 1;
	string description = 2;
	int32 price = 3;
}

message CreateProductReply{
	int32 status = 1;
	string message = 2;
	int32 createdItemsCount = 3;
}

message GetAllProductsRequest
{
	int32 page = 1;
	int32 take = 2;
}

message GetAllProductsReply
{
	int32 id = 1;
	string title = 2;
	string description = 3;
	int32 price = 4;
	google.protobuf.Timestamp createDate = 5;
}

message UpdateProductRequest{
	int32 id = 1;
	string title = 2;
	string description = 3;
	int32 price = 4;
}

message UpdateProductReply{
	int32 status = 1;
	string message = 2;
	int32 updatedItemsCount = 3;
}

message GetProductByIdRequest
{
	int32 id = 1;
}

message GetProductByIdReply
{
	int32 id = 1;
	string title = 2;
	string description = 3;
	int32 price = 4;
	google.protobuf.Timestamp createDate = 5;
}

message RemoveProductByIdRequest
{
	int32 id = 1;
}

message RemoveProductByIdReply
{
	int32 status = 1;
	string message = 2;
	int32 removedItemsCount = 3;
}